# rustserver

./: Cargo.toml  README.md  gitpod.yaml
src/: auth.rs  error.rs  jwt.rs  main.rs
