[package]
name = "rustserver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.3"
jsonwebtoken = "^9.1.0"
serde = "^1.0.19"
chrono = "^0.4.13"
error = "0.1.9"
tokio = { version = "1", features = ["full"] }