[package]
name = "rustserver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.3"
jsonwebtoken = "^9.1.0"
serde = { version = "1.0.192", features = ["derive"]}
serde_json = "1.0"
chrono = "^0.4.13"
thiserror= "1.0.52"
tokio = { version = "1.35.1", features = ["full"] }

[profile.dev]
debug = 0

[profile.release]
panic = 'abort'